--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # 服务端口
 server.port=80
 
+
 # TODO 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=wechat
 spring.datasource.password=wechat123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
 
 # TODO Druid 配置
 ## 配置获取连接等待超时的时间
@@ -27,6 +29,7 @@ spring.datasource.druid.filter.slf4j.connection-logger-name=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
+
 # TODO JPA 配置
 spring.jpa.database=mysql
 # 在控制台显示自动生成的sql语句
@@ -37,3 +40,6 @@ spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.h
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # RDBMS 方言
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# TODO 日志配置
+logging.config=classpath:config/logback-spring.xml
