--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <version>6.0.13.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
 
 
     </dependencies>
