--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.config=classpath:config/logback-spring.xml
 
 
+# TODO Redis配置
+spring.redis.host=47.99.200.185
+spring.redis.port=6379
+spring.redis.password=19951006
+# 虽然默认也是0号数据库，这里还是记录下
+spring.redis.database=0
+spring.redis.lettuce.shutdown-timeout=10000ms
+spring.redis.lettuce.pool.max-wait=1000ms
+spring.redis.lettuce.pool.max-idle=2
+spring.redis.lettuce.pool.max-active=50
