--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=80
 
 # TODO 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=wechat
 spring.datasource.password=wechat123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
