--- a/src/main/resources/config/wechat.properties
+++ b/src/main/resources/config/wechat.properties
@@ -10,3 +10,5 @@ wechat.secret=73f2796ecf1d04d6136b4b41eb603f3b
 # 获取 access_token 链接
 wechat.access_token.url=${wechat.baseurl}/cgi-bin/token?grant_type=client_credential&appid=${wechat.appid}&secret=${wechat.secret}
 
+# 获取 微信服务器 IP地址
+wechat.ip.url=${wechat.baseurl}/cgi-bin/getcallbackip?access_token=
