--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <version>1.2.54</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+
     </dependencies>
 
     <build>
