--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
             <version>27.0.1-jre</version>
         </dependency>
 
+        <!-- 主要 用来兼容 JDK 9+ -->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
