--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,10 @@ spring.redis.lettuce.shutdown-timeout=10000ms
 spring.redis.lettuce.pool.max-wait=1000ms
 spring.redis.lettuce.pool.max-idle=2
 spring.redis.lettuce.pool.max-active=50
+
+
+
+spring.mvc.static-path-pattern=/static/
+spring.resources.static-locations=classpath:/static/
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
