配置订阅消息自动回应时的详情URL

--- a/src/main/resources/config/welcome_msg.properties
+++ b/src/main/resources/config/welcome_msg.properties
@@ -4,4 +4,4 @@ response_msg.title=欢迎关注胖宝的伦哥的公众号~
 # 用户关注公众号后，触发自动回复，会回复一条图文消息，下面是图文消息的图片
 response_msg.banner=${aliecs.host}imgs/banner/welcome_news_banner.jpg
 response_msg.description=Hi，偷偷告诉你，他们有很多关于爱的道理，而我有你。
-response_msg.url=${response_msg.banner}
+response_msg.url=${aliecs.host}welcome
