--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=80
 
 # TODO 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=wechat
 spring.datasource.password=wechat123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -47,7 +47,7 @@ logging.config=classpath:config/logback-spring.xml
 
 
 # TODO Redis配置
-spring.redis.host=47.99.200.185
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=19951006
 # 虽然默认也是0号数据库，这里还是记录下
@@ -56,3 +56,9 @@ spring.redis.lettuce.shutdown-timeout=10000ms
 spring.redis.lettuce.pool.max-wait=1000ms
 spring.redis.lettuce.pool.max-idle=2
 spring.redis.lettuce.pool.max-active=50
+
+
+# TODO MongoDB配置
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=wechat
+spring.data.mongodb.port=27017
