--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,4 @@ spring.redis.lettuce.pool.max-active=50
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=wechat
 spring.data.mongodb.port=27017
+spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
