--- a/src/main/resources/config/welcome_msg.properties
+++ b/src/main/resources/config/welcome_msg.properties
@@ -1,7 +1,10 @@
 # 服务器 host
+# suppress inspection "UnusedProperty"
 aliecs.host=http://47.99.200.185/
-response_msg.title=欢迎关注这个超正经的公众号~
+
+# 用户订阅公众号后，触发的自动回复中的信息
+welcom.msg.title=欢迎关注这个超正经的公众号~
 # 用户关注公众号后，触发自动回复，会回复一条图文消息，下面是图文消息的图片
-response_msg.banner=${aliecs.host}imgs/banner/welcome_news_banner.jpg
-response_msg.description=我看见，你从人群中走来...\n点击查看全文
-response_msg.url=${aliecs.host}welcome
+welcom.msg.banner=${aliecs.host}imgs/banner/welcome_news_banner.jpg
+welcom.msg.description=我看见，你从人群中走来...\n点击查看全文
+welcom.msg.url=${aliecs.host}welcome
