--- a/src/main/resources/config/welcome_msg.properties
+++ b/src/main/resources/config/welcome_msg.properties
@@ -6,5 +6,5 @@ aliecs.host=http://47.99.200.185/
 welcom.msg.title=欢迎关注这个超正经的公众号~
 # 用户关注公众号后，触发自动回复，会回复一条图文消息，下面是图文消息的图片
 welcom.msg.banner=${aliecs.host}imgs/banner/welcome_news_banner.jpg
-welcom.msg.description=我看见，你从人群中走来...\n点击查看全文
-welcom.msg.url=${aliecs.host}welcome
+welcom.msg.description=我看见，你从人群中走来...\n\n点击查看全文
+welcom.msg.url=http://note.youdao.com/noteshare?id=3df33d89adae7e91dbdf697eb88d3075&sub=E889E1B585C84DF08D25D4B1CE654823
