--- a/src/main/resources/config/wechat.properties
+++ b/src/main/resources/config/wechat.properties
@@ -12,3 +12,6 @@ wechat.access_token.url=${wechat.baseurl}/cgi-bin/token?grant_type=client_creden
 
 # 获取 微信服务器 IP地址
 wechat.ip.url=${wechat.baseurl}/cgi-bin/getcallbackip?access_token=
+
+# 微信公众号的openID
+wechat.from.openid=oQNld1W7beFJgJ_CfuGE1_tKVZZ4
