--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,20 @@
             <version>1.2.54</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
+
+
+
         <!-- 主要 用来兼容 JDK 9+ -->
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
