--- a/src/main/resources/config/wechat.properties
+++ b/src/main/resources/config/wechat.properties
@@ -14,4 +14,4 @@ wechat.access_token.url=${wechat.baseurl}/cgi-bin/token?grant_type=client_creden
 wechat.ip.url=${wechat.baseurl}/cgi-bin/getcallbackip?access_token=
 
 # 微信公众号的openID
-wechat.from.openid=oQNld1W7beFJgJ_CfuGE1_tKVZZ4
+wechat.from.openid=gh_eeaaf5c9001c
