--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 # TODO 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://47.99.200.185:3306/wechat_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=wechat
 spring.datasource.password=wechat123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -60,6 +60,6 @@ spring.redis.lettuce.pool.max-active=50
 
 # TODO MongoDB配置
 spring.data.mongodb.host=47.99.200.185
-spring.data.mongodb.database=wechat
+spring.data.mongodb.database=wechat_dev
 spring.data.mongodb.port=27017
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
