--- a/src/main/resources/config/constant-msg.properties
+++ b/src/main/resources/config/constant-msg.properties
@@ -9,7 +9,7 @@ welcome.msg.banner=${aliecs.host}static/imgs/banner/welcome_news_banner.jpg
 welcome.msg.description=我看见，你从人群中走来...\n\n点击查看全文
 welcome.msg.url=http://note.youdao.com/noteshare?id=3df33d89adae7e91dbdf697eb88d3075&sub=E889E1B585C84DF08D25D4B1CE654823
 
-help.error.msg=服务器除了一点小故障，可以趁机撩撩伦哥^_^~
+help.error.msg=服务器出现了一点小故障，可以趁机撩撩伦哥^_^~
 help.root.msg=已为当前用户开启root权限，您可以进行使用相关管理员功能，5分种内有效！
 
 article.img.baseurl=${aliecs.host}static/imgs/articles/article_{}.jpg
