--- a/src/main/resources/config/constant-msg.properties
+++ b/src/main/resources/config/constant-msg.properties
@@ -11,5 +11,8 @@ welcome.msg.url=http://note.youdao.com/noteshare?id=3df33d89adae7e91dbdf697eb88d
 
 help.error.msg=服务器出现了一点小故障，可以趁机撩撩伦哥^_^~
 help.root.msg=已为当前用户开启root权限，您可以进行使用相关管理员功能，5分种内有效！
+help.permission.error.msg=权限不足！不能执行指定命令。若要使用相关功能，请主动撩伦哥获取ROOT权限！
 
 article.img.baseurl=${aliecs.host}static/imgs/articles/article_{}.jpg
+
+article.add.info=您可以回复【url|wdxpn|url】，使用【|wdxpn|】将URL分隔开~
