调整命令等级类型，加入老爹的黄历功能，加入咖啡因缓存

--- a/src/main/resources/config/almanac.properties
+++ b/src/main/resources/config/almanac.properties
@@ -1,1 +1,4 @@
 almanac.url=http://m.laohuangli.net/
+
+almanac.img.lucky.url=${aliecs.host}static/imgs/almanac/luck_lucky.jpg
+almanac.img.rest.url=${aliecs.host}static/imgs/almanac/luck_rest.jpg
