--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -63,3 +63,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.database=wechat
 spring.data.mongodb.port=27017
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
+
+
+# TODO Cache 缓存配置
+spring.cache.type=caffeine
+spring.cache.cache-names=almanac
