--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -63,3 +63,8 @@ spring.data.mongodb.host=47.99.200.185
 spring.data.mongodb.database=wechat_dev
 spring.data.mongodb.port=27017
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
+
+
+# TODO Cache 缓存配置
+spring.cache.type=caffeine
+spring.cache.cache-names=almanac
