--- a/src/main/resources/config/constant-msg.properties
+++ b/src/main/resources/config/constant-msg.properties
@@ -18,3 +18,5 @@ article.img.baseurl=${aliecs.host}static/imgs/articles/article_{}.jpg
 menu.header.info=您可以回复前面的数字使用相关的功能哦~
 menu.common.cmd=\n\n您还可以使用以下特殊命令：\n-：返回上级菜单\n#：返回首页
 article.add.info=您可以回复【url|wdxpn|url】，使用【|wdxpn|】将URL分隔开~${menu.common.cmd}
+
+almanac.error.info=获取黄历信息失败，请稍后重试~
