新增图片转字符画功能，正在开发接收图片消息并处理

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -68,3 +68,7 @@ spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model
 # TODO Cache 缓存配置
 spring.cache.type=caffeine
 spring.cache.cache-names=almanac
+
+
+# TODO 临时文件夹路径
+wechat.temp.path=/home/temp/wechat_prod/
