--- a/src/main/resources/config/toys.attr.properties
+++ b/src/main/resources/config/toys.attr.properties
@@ -1,1 +1,4 @@
-toys.img2txt.elements=@#&$%*o!;.
+# suppress inspection "TrailingSpacesInProperty"
+toys.img2txt.elements=@#&$%*o!;\u0020
+toys.img2txt.temp.path=${wechat.temp.path}imgs/
+toys.img2txt.temp.result.path=${wechat.temp.path}imgs/{openid}/{openid}_{current}.jpg
