调整 多线程执行 图片转字符画的逻辑，由 execute 变为 submit，Runable 变为 callable

--- a/src/main/resources/config/toys.attr.properties
+++ b/src/main/resources/config/toys.attr.properties
@@ -1,6 +1,5 @@
 # suppress inspection "TrailingSpacesInProperty"
 toys.img2txt.elements=@#&$%*o!;\u0020
-toys.img2txt.temp.result.folder=${wechat.temp.path}imgs/{openid}_{current}/
-toys.img2txt.temp.result.path=${toys.img2txt.temp.result.folder}{openid}_{current}.jpg
-toys.img2txt.result.header=您可以在大约1分钟后点击下面的链接，下载转换后的图片。过早点击图片可能还没转换好哦~
+toys.img2txt.temp.result.path=${wechat.temp.path}imgs/{openid}_{current}/{openid}_{current}.jpg
+toys.img2txt.result.header=您可以点击下面的链接，下载转换后的图片哦~
 toys.img2txt.result.base.url=${aliecs.host}../../../..${wechat.temp.path}imgs/{openid}_{current}/{filename}
