调整目录结构

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -71,4 +71,5 @@ spring.cache.cache-names=almanac
 
 
 # TODO 临时文件夹路径
-wechat.temp.path=/home/temp/wechat_dev/
+wechat.temp.folder=wechat_dev/
+wechat.temp.path=/home/temp/${wechat.temp.folder}
