--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -71,4 +71,5 @@ spring.cache.cache-names=almanac
 
 
 # TODO 临时文件夹路径
-wechat.temp.path=/home/temp/wechat_prod/
+wechat.temp.folder=wechat/
+wechat.temp.path=/home/temp/${wechat.temp.folder}
