--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -143,6 +143,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.facebook.fresco</groupId>
+            <artifactId>animated-gif</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+
 
         <!-- 主要 用来兼容 JDK 9+ -->
         <dependency>
