--- a/src/main/resources/config/constant-msg.properties
+++ b/src/main/resources/config/constant-msg.properties
@@ -33,5 +33,5 @@ article.img.baseurl=${aliecs.host}static/imgs/articles/article_{}.jpg
 article.add.info=您可以回复【url|wdxpn|url】，使用【|wdxpn|】将URL分隔开~${menu.common.cmd}
 
 
-# 黄历命令相关信息
-almanac.error.info=获取黄历信息失败，请稍后重试~
+# 公共配置
+wechat.temp.path=${HOME}/cache/wechat
