--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -42,10 +42,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
-# TODO 日志配置
-logging.config=classpath:config/logback-spring.xml
-
-
 # TODO Redis配置
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -70,6 +66,14 @@ spring.cache.type=caffeine
 spring.cache.cache-names=almanac
 
 
-# TODO 临时文件夹路径
-wechat.temp.folder=wechat/
-wechat.temp.path=/home/temp/${wechat.temp.folder}
+# TODO logback 日志配置
+logging.file=${HOME}/cache/logs/wechat.log
+logging.file.max-size=20MB
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){red}%clr(%5p) %clr(---){faint} %clr(%logger{79}){cyan} %clr(:){faint} %m%n%wEx
+logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){red}%clr(%5p) %clr(---){faint} %clr(%logger{79}){cyan} %clr(:){faint} %m%n%wEx
+logging.level.com.zereao=debug
+logging.level.com=info
+logging.level.ch.qos.logback=info
+logging.level.org=info
+logging.level.io.lettuce=info
+logging.level.io.netty=info
