--- a/src/main/resources/config/toys.attr.properties
+++ b/src/main/resources/config/toys.attr.properties
@@ -2,4 +2,4 @@
 toys.img2txt.elements=@#&$%*o!;\u0020
 toys.img2txt.temp.result.path=${wechat.temp.path}imgs/{openid}/{current}.jpg
 toys.img2txt.result.header=您可以点击下面的链接，下载转换后的图片哦~所有下载链接30分钟内有效！
-toys.img2txt.result.base.url=${aliecs.host}temp/${wechat.temp.folder}imgs/{openid}/{filename}
+toys.img2txt.result.base.url=${aliecs.host}temp/wechat/imgs/{openid}/{filename}
