增加Consul配置中心生产环境配置备份，增加生产环境彩色日志输出

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -69,6 +69,7 @@ spring.cache.cache-names=almanac
 # TODO logback 日志配置
 logging.file=${HOME}/cache/logs/wechat.log
 logging.file.max-size=20MB
+spring.output.ansi.enabled=always
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){red}%clr(%5p) %clr(---){faint} %clr(%logger{79}){cyan} %clr(:){faint} %m%n%wEx
 logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr([%thread]){red}%clr(%5p) %clr(---){faint} %clr(%logger{79}){cyan} %clr(:){faint} %m%n%wEx
 logging.level.com.zereao=debug
