调整部分逻辑

--- a/config/consul_config/config/wechat-dev/data.yaml
+++ b/config/consul_config/config/wechat-dev/data.yaml
@@ -1,7 +1,7 @@
 # 公共配置
 common:
   ecsHost: "http://47.99.200.185/"
-  tempPath: "./cache/wechat/"
+  tempPath: "${HOME}/cache/wechat/"
   # 微信公众号的openID
   fromOpenid: "gh_eeaaf5c9001c"
 
